CMBSandbox4/src/objects/Cool_Images__c.object
<CustomObject>
    <fields>
        <fullName>Horizontal_Bars_to_Indicate_Scoring2__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, Industry_Score__c * 2) &amp; 
IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 
200 - (Industry_Score__c * 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horizontal Bars to Indicate Scoring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Score__c</fullName>
        <label>Industry Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_1__c</fullName>
        <label>Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cool Image</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cool Images Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cool Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>